tests/parse/error/list_unclosed_right1.err
Error: Unclosed delimiter ( while parsing list
   ╭─[tests/parse/error/list_unclosed_right1.scm:1:10]
   │
 1 │ (3132 ( a
   ·       ┬  ┬  
   ·       ╰───── Unclosed delimiter (
   ·          │  
   ·          ╰── Must be closed before this end of file
───╯
